--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <link rel="stylesheet" href="./styles/animations.css" />
   </head>
   <body class="page">
-    <header class="header rectangle">
+    <header class="header rectangle important">
       <div class="header__logo">&lt;/HTML&gt;</div>
       <h1 class="header__title">закрывающий тег</h1>
     </header>
 
     <main class="content">
       <article class="card rectangle">
-        <header class="card__title">
-          Фритрек и нулевой спринт: Подготовка к работе
+        <header>
+          <h2 class="card__title">
+            Фритрек и нулевой спринт: Подготовка к работе
+          </h2>
         </header>
 
         <div class="card__image">
@@ -48,7 +50,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -81,14 +83,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
 
       <article class="card rectangle">
-        <header class="card__title">1 спринт: Я — чистый лист</header>
+        <header>
+          <h2 class="card__title">1 спринт: Я — чистый лист</h2>
+        </header>
 
         <div class="card__image">
           <img
@@ -114,7 +118,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -147,14 +151,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
 
       <article class="card rectangle">
-        <header class="card__title">1 спринт: А если не получится?</header>
+        <header>
+          <h2 class="card__title">1 спринт: А если не получится?</h2>
+        </header>
 
         <div class="card__image">
           <img
@@ -175,7 +181,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -208,14 +214,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
 
       <article class="card rectangle">
-        <header class="card__title">2 спринт: Погоня за идеалом</header>
+        <header>
+          <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
+        </header>
 
         <div class="card__image">
           <img
@@ -238,7 +246,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -271,14 +279,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
 
       <article class="card rectangle">
-        <header class="card__title">2 спринт: О тех, кто рядом</header>
+        <header>
+          <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
+        </header>
 
         <div class="card__image">
           <img
@@ -302,7 +312,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -335,14 +345,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
 
       <article class="card rectangle">
-        <header class="card__title">3 спринт: Обходные стратегии</header>
+        <header>
+          <h2 class="card__title">3 спринт: Обходные стратегии</h2>
+        </header>
 
         <div class="card__image">
           <img
@@ -363,7 +375,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -396,14 +408,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
 
       <article class="card rectangle">
-        <header class="card__title">3 спринт: Когда опускаются руки</header>
+        <header>
+          <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
+        </header>
 
         <div class="card__image">
           <img
@@ -429,7 +443,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -462,14 +476,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
 
       <article class="card rectangle">
-        <header class="card__title">«Сейчас я здесь»</header>
+        <header>
+          <h2 class="card__title">«Сейчас я здесь»</h2>
+        </header>
 
         <div class="card__image">
           <img
@@ -493,7 +509,7 @@
         </div>
 
         <footer class="card__footer">
-          <button class="card__icon-button">
+          <button class="card__icon-button" aria-hidden="true" type="button">
             <svg
               class="like-icon"
               width="39"
@@ -526,7 +542,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button card__button-view">
+          <button class="card__like-button card__button-view" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
@@ -535,6 +551,7 @@
       <button
         class="button-open-dialog card__button-view"
         onclick="window['dialog'].showModal()"
+        type="button"
       >
         <svg
           width="40"
@@ -559,10 +576,11 @@
             <use href="./svg/floppy.svg#floppy" />
           </svg>
         </div>
-        <div>Вставьте дискету, чтобы продолжить</div>
+        <p>Вставьте дискету, чтобы продолжить</p>
         <button
           onclick="window['dialog'].close()"
           class="button-close-dialog card__button-view"
+          type="button"
         >
           <span class="button__text">ок</span>
         </button>
